Closed Bug 133387 Opened 24 years ago Closed 24 years ago

Mouse pointer "x" over Personal Toolbar dropdown menus

Categories

(SeaMonkey :: Bookmarks & History, defect, P4)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: sc1, Assigned: bryner)

References

()

Details

(Whiteboard: [fixed on trunk] [ADT3 RTM],custrtm-)

Attachments

(2 files, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.9+) Gecko/20020325 BuildID: 2002032508 The mouse pointer is an "x" instead of the usual arrow when selecting items in Personal Toolbar dropdown menus (nested folders.) Reproducible: Sometimes Steps to Reproduce: 1. Set up a bookmark folder in the Personal Toolbar 2. Mouse over, but do not click on, a link in the folder Actual Results: You see an "x" where an arrow should be. This is not consistent; sometimes it's OK but most of the time it isn't. Expected Results: You should see an arrow not an "x".
Probably a symptom of bug 133265.
Depends on: 133265
My windows 3/27 build has this fixed and on bug 133265 the linux build from 3/28 is fixed so perhaps the submitter can check again?
I get the root window pointer (ie the X pointer) whenever I use a menu. This is with build 2002032717. Somewhat disconcerning even after a few weeks of it happening.
This is now partially fixed; with 2002032808 on Linux, when mousing over menus the moused-over menu item is highlighted, but the pointer is still wrong (the "x" instead of the arrow.)
Confirmed with 2002-04-11-09 on Linux using an old KDE as desktop.
Status: UNCONFIRMED → NEW
Ever confirmed: true
wfm 200204112 Linux, KDE
Still a cross on FreeBSD. Version: Mozilla/5.0 (X11; U; FreeBSD i386; en-US; rv:0.9.9+) Gecko/20020412, build 2002041207
Doesn't work for me. Build 2002041307, Linux, twm as the window manager. (no KDE or gnome or anything fancy).
*** Bug 137448 has been marked as a duplicate of this bug. ***
Can someone please add the "regression" keyword?
this bug still exists with RC1 Mozilla Mozilla 1.0 Release Candidate 1 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0rc1) Gecko/20020417 I think this bug should be fixed BEFORE final version 1.0
My guess is that this is a window manager issue... I don't see it with sawfish 1.0, but maybe that's a sawfish quirk. blizzard, any ideas?
One possibility is that for whatever reason, the cursor for the popup is getting set to whatever the root window's cursor is. On sawfish, this is an arrow; on other WM's, it's the X.
Bryner seems to be right. In fvwm when i set xroot pointer, same pointer shows in menus: xsetroot -cursor_name mouse and i see three button mouse in all menus.
Can someone who is seeing the problem try this patch?
Patch didn't seem to help, still wrong (root window's) pointer.
Attached patch better patchSplinter Review
The previous patch didn't work because our internal state already indicated that we were using the standard cursor. This one should work.
Attachment #81585 - Attachment is obsolete: true
Yes this patch works ok. This would be good patch to 1.0 too.
Comment on attachment 81755 [details] [diff] [review] better patch r=pavlov
Attachment #81755 - Flags: review+
taking
Assignee: ben → bryner
Target Milestone: --- → mozilla1.0
Comment on attachment 81755 [details] [diff] [review] better patch sr=blizzard
Attachment #81755 - Flags: superreview+
Checked this in on the trunk. Also nominating for nsbeta1. As demonstrated by the comments here, this is a fairly visible defect that can appear in a variety of configurations. Leaving the bug open until this is plussed or minused.
Status: NEW → ASSIGNED
Keywords: nsbeta1
Whiteboard: [fixed on trunk]
Nav triage team: nsbeta1-
Keywords: nsbeta1nsbeta1-
I think we should consider this for RTM at least. An "X" cursor creates the false impression that the menu is somehow disabled. When a user sees this, we're going to look downright incompetent. This is an extremely safe fix. Why would we not take it?
Keywords: nsbeta1-nsbeta1
nsbeta1+/adt3-RTM per Nav triage team.
Keywords: nsbeta1nsbeta1+
Priority: -- → P4
Whiteboard: [fixed on trunk] → [fixed on trunk] [ADT3 RTM]
Closing the bug since this is checked in on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
nope it is not fixed... I still have CROSS when I click on File or any other pulldown menu Mozilla 1.0 Release Candidate 2 Mozilla/5.0 (X11; U; RH6.2 Linux i686; en-US; rv:1.0rc2) Gecko/20020510
This it is not fixed in 1.0RC2 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0rc2) Gecko/20020510 Seeing this under SuSE Linux 7.2
RC2 wasn't released off the trunk. This patch isn't on the 1.0 branch so it isn't in RC2.
bryner, if you think this is 1.0 material (it looks safe enough) please drop email to drivers asking to have it put in.
bryner, can you please try to get this into 1.0? See comment #31 where blizzard says it should be safe for 1.0
this bug is not fixed... I still have CROSS when I click on File or any other pulldown menu Mozilla Mozilla 1.0 Release Candidate 3 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0rc3) Gecko/20020523
*** Bug 137448 has been marked as a duplicate of this bug. ***
Adding custrtm- whiteboard comment; this bug has no customization impact.
Whiteboard: [fixed on trunk] [ADT3 RTM] → [fixed on trunk] [ADT3 RTM],custrtm-
Attachment #81755 - Flags: approval+
please checkin to the 1.0.1 branch (MOZILLA_1_0_BRANCH). you may need adt approval for this considering you're a netscape employee.
Keywords: mozilla1.0.1+
Keywords: adt1.0.1
*** Bug 148349 has been marked as a duplicate of this bug. ***
adt1.0.1+ (on behalf ADT's behalf) for checkin to the 1.0 branch, pending Driver's approval. Pls check this in asap.
Keywords: adt1.0.1adt1.0.1+
Checked in on the branch.
Keywords: fixed1.0.1
NOPE ... this bug is not yet solved !! $%^grr&*(#@ the rest is censored This BUG is NOT yet fixed ... Mozilla 1.0 Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.0) Gecko/20020529 REDHAT Linux 2.2.14-5.0 #1 Tue Mar 7 21:07:39 EST 2000 i686
LISTEN, we've been over this several times in the bug. This fix did NOT make the 1.0 release. It will be in the 1.0.1 release.
*** Bug 130093 has been marked as a duplicate of this bug. ***
It works flawlessly for Mozilla 1.1a Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1a) Gecko/20020610 Thanks to all
Keywords: mozilla1.0.1+
VERIFIED Fixed branch and trunk builds
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: