Make sure to set a cursor for our popup windows, since GTK doesn't do this automatically for us (and we don't want it to always inherit the root window cursor).  Bug 133387, r=pavlov, sr=blizzard.